--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -35,7 +35,7 @@ body
   h1
   h2
   .site-name
-    font-family Spectral, serif
+    font-family Ubuntu, serif
     font-weight 700
     line-height 1.2
     text-transform capitalize
