Force dark mode

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -8,7 +8,7 @@ body
   background $darkBgColor
   color $lightTextColor
 
-  @media (prefers-color-scheme: light)
+  @media (prefers-color-scheme: no-preference)
     background #fff
     color $textColor
 
