Fix DNS checker with dns.sh domain

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -81,6 +81,10 @@ body
         flex-wrap: nowrap
         flex-direction: column
         align-items: flex-start
+  .gl_logo_warp
+    a
+      img
+        height 90px
   details
     margin -3rem 0 0 0
     &[open]
