--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,6 +28,41 @@
 .pl_logo_warp a:nth-child(7) img {
   height: calc(53px + 32px);
 }
+
+article p a,
+article td a,
+article ul li a{
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    text-decoration: none !important;
+    vertical-align: top;
+}
+
+article p a::after,
+article td a::after,
+article ul li a::after{
+    content: '';
+    position: absolute;
+    top: 60%;
+    left: 0;
+    right: 0;
+    bottom: 4px;
+    background: #008ae670;
+    transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
+    z-index: -1;
+}
+
+.link-hover-red::after{
+    background: #e6373770;
+}
+
+article p a:hover:after,
+article td a:hover:after,
+article ul li a:hover:after{
+    top: 4px;
+}
+
 @media (max-width: 570px) {
   .pl_logo_warp {
     flex-wrap: nowrap;
